+ add waiting statue to time ticket + text change (fix)

--- a/views/templates/ticketUserTicketInfo.html
+++ b/views/templates/ticketUserTicketInfo.html
@@ -3,7 +3,7 @@
     <p>Deine Arbeit ist beendet!</p>
   </div>
   <div ng-switch-when="assigned">
-    <p>Dein Ticket ist in arbeit".</p>
+    <p>Dein Ticket ist in Arbeit.</p>
   </div>
   <div ng-switch-when="scheduled">
     <p>Dein Ticket ist geplant, sobald ein Gerät frei ist, wird dein Auftrag bearbeitet!</p>
