--- a/fl-app/src/app/login/terminallogin/terminallogin.component.html
+++ b/fl-app/src/app/login/terminallogin/terminallogin.component.html
@@ -6,21 +6,8 @@
   <label for="passwordInput">Password:</label>
   <input name="password" type="password" id="passwordInput" ngModel>
   <button type="submit">Login</button>  
-</form>
+</form> 
 
-<input  style="margin-top:10px;" (click)="showHideNfcLogin()" type="submit"  value="Login with NFC-Card"/>
-<!-- Overlay -->
-<div class="nfc-overlay" *ngIf="showNfcLogin">
-  <div class="nfc-overlay-content" *ngIf="showNfcLogin">
-    <a (click)="showHideNfcLogin(false)" class="close">x</a>
-    <h2>Jetzt Karte auflegen</h2>     
-      <p>Achtung: Du musst die Karte zuerst zu deinem Account hinzufügen!</p>  <!-- totranslete class="nfc-token"-->
-      <p>{{nfc_login_message}}</p>
-      <form #f="ngForm" (keyup.enter)="submitCheckToken(f)" class="nfc-token" novalidate>
-        <input name="token" autocomplete="off" ngModel autofocus>
-      </form>
-      <img src="{{appApiService.getBlogUrl()}}/wp-content/plugins/fablab-ticket/plugins/nfc-login/tucard.jpg"/> 
-  </div>
-  <div class="nfc-overlay-background" (click)="showHideNfcLogin(false)"></div>
-</div>
+<app-nfclogin [nfc_message]="nfc_login_message"
+   (onCardLoaded)="onCardLoaded($event)"> ></app-nfclogin>
 
