--- a/fl-app/src/app/login/nfclogin/nfclogin.component.html
+++ b/fl-app/src/app/login/nfclogin/nfclogin.component.html
@@ -1,4 +1,4 @@
-<input  style="margin-top:10px;" (click)="showHideNfcOverlay()" type="submit"  value="Login with NFC-Card"/>
+<input  style="margin-top:10px;" (click)="showHideNfcOverlay()" type="submit"  value="{{nfcButtonLabel}}"/>
 <!-- Overlay -->
 <div class="nfc-overlay" *ngIf="showNfcOverlay">
   <div class="nfc-overlay-content" *ngIf="showNfcOverlay">
@@ -7,7 +7,7 @@
       <p>Achtung: Du musst die Karte zuerst zu deinem Account hinzufügen!</p>  <!-- totranslete class="nfc-token"-->
       <p>{{nfc_message}}</p>
       <form #f="ngForm" (keyup.enter)="submitCheckToken(f)" class="nfc-token" novalidate>
-        <input name="token" autocomplete="off" ngModel autofocus>
+        <input name="token" autocomplete="off" ngModel focus="{{showNfcOverlay}}">
       </form>
       <img src="{{appApiService.getBlogUrl()}}/wp-content/plugins/fablab-ticket/plugins/nfc-login/tucard.jpg"/> 
   </div>
