--- a/fl-app/src/app/login/nfclogin/nfclogin.component.html
+++ b/fl-app/src/app/login/nfclogin/nfclogin.component.html
@@ -3,8 +3,7 @@
 <div class="nfc-overlay" *ngIf="showNfcOverlay">
   <div class="nfc-overlay-content" *ngIf="showNfcOverlay">
     <a (click)="showHideNfcOverlay(false)" class="close">x</a>
-    <h2>Jetzt Karte auflegen</h2>     
-      <p>Achtung: Du musst die Karte zuerst zu deinem Account hinzufügen!</p>  <!-- totranslete class="nfc-token"-->
+    <h2>Jetzt Karte auflegen</h2>     <!-- totranslate -->
       <p>{{nfc_message}}</p>
       <form #f="ngForm" (keyup.enter)="submitCheckToken(f)" class="nfc-token" novalidate>
         <input name="token" autocomplete="off" ngModel focus="{{showNfcOverlay}}">
