--- a/fl-app/src/app/login/register/register.component.html
+++ b/fl-app/src/app/login/register/register.component.html
@@ -1,21 +1,22 @@
-<p>
-  register works!
-</p>
+
 <h1 class="entry-title">Register</h1>
-<p>{{register_message}}</p>
-<form #registerform="ngForm" (ngSubmit)="submitRegister(registerform)" class="login-form" novalidate>
+<app-nfclogin [auto_hide]="nfc_overlay_autohide" [nfcButtonLabel]="nfc_button_label" 
+   (onCardLoaded)="onCardLoaded($event)"> ></app-nfclogin>
+<br>
+<form #registerform="ngForm" (ngSubmit)="submitRegistration()" class="login-form">
   <label for="loginInput">Username:</label>  
-  <input [(ngModel)]="user.username" name="login" type="text" id="usernameInput" ngModel><br>
+  <input [(ngModel)]="user.username" name="login" type="text" id="usernameInput" ngModel required minlength="5"><br>
   <label for="loginInput">Vorname:</label>  
   <input [(ngModel)]="user.name" name="name" type="text" id="nameInput" ngModel>
   <label for="loginInput">Nachname:</label>  
   <input [(ngModel)]="user.surename" name="surename" type="text" id="surenameInput" ngModel><br>
   <label for="loginInput">Email:</label>  
-  <input [(ngModel)]="user.email" name="email" type="text" id="emailInput" ngModel><br>
+  <input [(ngModel)]="user.email" name="email" type="email" id="emailInput" ngModel email required><br>
   <label for="passwordInput">Password:</label>
-  <input [(ngModel)]="user.password" name="password" type="password" id="passwordInput" ngModel focus="{{focus_password}}"><br>
-  <button type="submit">Register</button>  
+  <input [(ngModel)]="user.password" name="password" type="password" id="passwordInput" ngModel required minlength="8" focus="{{focus_password}}"><br>
+  <label for="cardset">NFC-Card:</label>
+  <input [(ngModel)]="cardset" name="cardset" type="checkbox" ngModel disabled><br>
+  <p>{{register_message}}</p>
+  <button type="submit" [disabled]="registerform.form.invalid">Registrieren</button>  
 </form> 
 
-<app-nfclogin [showNfcOverlay]="nfc_overlay" [nfcButtonLabel]="nfc_button_label"
-   (onCardLoaded)="onCardLoaded($event)"> ></app-nfclogin>
