--- a/fl-app/src/app/login/register/register.component.css
+++ b/fl-app/src/app/login/register/register.component.css
@@ -1,3 +1,55 @@
+
+
+
+/*--------------------
+Form
+---------------------*/
+
+label {
+  margin-bottom: 2px;
+}
+
+form {
+  margin-top: 20px;
+}
+
+form p {
+  margin-bottom: 10px;
+}
+
+input[type=text],
+input[type=email],
+input[type=password] { 
+  width: 300px;
+  height: 32px;
+  padding: 0px 10px;
+  margin-bottom: 10px;
+  background-color: rgba(0,0,0,0.03);
+  border: none;
+  display: inline;
+  color: #303030;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+ ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    opacity: 0.7; /* Firefox */
+}
+
+
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=password]:focus {
+  background-color: rgba(0,0,0,0.05);
+  /*background-color: rgba(2,143,118,0.15);*/
+  outline: none;
+  box-shadow: none;
+}
+
+.checkbox-field label{
+  display: inline;
+}
+
 .ng-valid[required], .ng-valid.required  {
   border-left: 5px solid #42A948; /* green */
 }
