--- a/fl-app/src/app/ticket/my-tickets/my-tickets.component.html
+++ b/fl-app/src/app/ticket/my-tickets/my-tickets.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let ticket of tickets">
+<div *ngFor="let ticket of (tickets$ | async )?.tickets">
   <app-ticket [ticket]="ticket"></app-ticket>
 </div>
