improve file structure add Button and Dialog Component

--- a/fl-app/src/app/ticket/my-tickets/my-tickets.component.html
+++ b/fl-app/src/app/ticket/my-tickets/my-tickets.component.html
@@ -1,3 +1,4 @@
 <div *ngFor="let ticket of ( tickets$ | async )?.tickets">
-  <app-ticket [ticket]="ticket"></app-ticket>
+  <app-ticket [ticket]="ticket"
+              (buttonClick)="buttonClick.emit($event)"></app-ticket>
 </div>
