--- a/fl-app/src/app/pages/profiles/profiles.component.html
+++ b/fl-app/src/app/pages/profiles/profiles.component.html
@@ -3,5 +3,5 @@
 </p>
 <app-my-tickets [tickets$]="tickets$"
                 (buttonClick)="buttonClicked($event)"></app-my-tickets>
-<app-dialog [$openDialogEvent]="$openDialogEvent">
+<app-dialog [openDialogEvent$]="openDialogEvent$">
 </app-dialog>
