add devices endpoinds and adapt frontend structure for multiple requests

--- a/fl-app/src/app/pages/profiles/profiles.component.html
+++ b/fl-app/src/app/pages/profiles/profiles.component.html
@@ -1,7 +1,11 @@
 <p>
   profiles works!
 </p>
-<app-my-tickets [tickets$]="tickets$"
+<app-my-tickets [tickets$]=" (profileData$ | async)?.tickets$"
                 (buttonClick)="buttonClicked($event)"></app-my-tickets>
+
+<div *ngFor="let device of ((profileData$ | async)?.devices$ | async )">
+  {{ device.name }}
+</div>
 <app-dialog [openDialogEvent$]="openDialogEvent$">
 </app-dialog>
