--- a/fl-app/src/app/components/dialog/dialog.component.html
+++ b/fl-app/src/app/components/dialog/dialog.component.html
@@ -1,8 +1,13 @@
-<div *ngIf="show" class="fl-overlay">
+<div *ngIf="showDialog" class="fl-overlay">
   <div class="device-ticket">
     <a class="close"
        (click)="closeOverlay()">x</a>
-    <ng-content></ng-content>
+    <h2>{{ data.Label }}</h2>
+    <div [innerHTML]="data.DeviceInfo"></div>
+    <div *ngFor="let link of data._links">
+      <app-button [label]="link.label"
+                  (buttonClick)="buttonClicked($event, link)"></app-button>
+    </div>
   </div>
   <div class="fl-overlay-background"
        (click)="closeOverlay()"></div>
