--- a/fl-app/src/app/pages/profiles/profiles.component.html
+++ b/fl-app/src/app/pages/profiles/profiles.component.html
@@ -1,10 +1,14 @@
 <p>Hello!</p>
 
 <app-my-tickets [tickets$]=" (profileData$ | async)?.tickets$"
-                (buttonClick)="buttonClicked($event)"></app-my-tickets>
+                (buttonClick)="buttonClicked(true, $event)"></app-my-tickets>
 
 <app-devices [devices$]="(profileData$ | async)?.devices$"
-             (buttonClick)="buttonClicked($event)"></app-devices>
+             (buttonClick)="buttonClicked(true, $event)"></app-devices>
 
-<app-dialog [openDialogEvent$]="openDialogEvent$">
+<app-dialog [openDialogEvent$]="openDialogEvent$"
+            [data]="(ticketOverlayData$| async)"
+            [showDialog]="showDialog"
+            (buttonClick)="buttonClicked(false, $event)"
+            (closeDialog)="closeDialog($event)">
 </app-dialog>
