--- a/fl-app/src/app/pages/profiles/my-tickets/my-tickets.component.html
+++ b/fl-app/src/app/pages/profiles/my-tickets/my-tickets.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let ticket of ( tickets$ | async )?.tickets">
+<div *ngFor="let ticket of tickets">
   <app-ticket [ticket]="ticket"
               (buttonClick)="buttonClick.emit($event)"></app-ticket>
 </div>
