--- a/fl-app/src/app/components/dialog/dialog.component.html
+++ b/fl-app/src/app/components/dialog/dialog.component.html
@@ -2,9 +2,9 @@
   <div class="device-ticket">
     <a class="close"
        (click)="closeOverlay()">x</a>
-    <h2>{{ data.Label }}</h2>
-    <div [innerHTML]="data.DeviceInfo"></div>
-    <div *ngFor="let link of data._links">
+    <h2>{{ data?.Label }}</h2>
+    <div [innerHTML]="data?.DeviceInfo"></div>
+    <div *ngFor="let link of data?._links">
       <app-button [label]="link.label"
                   (buttonClick)="buttonClicked($event, link)"></app-button>
     </div>
