Add Infos, Title an Messages to Resources and Components

--- a/fl-app/src/app/components/device/device.component.html
+++ b/fl-app/src/app/components/device/device.component.html
@@ -1,8 +1,11 @@
-<div class="fl-device-element fl-device-element-content"
-     [ngStyle]="{'border-style': '6px solid ' + device.color,
-                 'background-color': device.color}"
-     (click)="deviceClicked()">
-  <h2>{{device.name}}</h2>
-  <!--p>Verfügbare Geräte: <b><?= $number_devices ?></b></br>Wartende Personen: <b><?= $waiting['persons'] ?></b></p-->
-  <!--p id="waiting-time">Vorraussichtlich Wartezeit: <b><?= get_post_time_string($waiting['time'], true) ?></b></p-->
+<div class="fl-device-element"
+     [ngStyle]="{'border': '6px solid ' + device.color,
+                   'background-color': device.color}">
+  <div class="fl-device-element-content"
+       (click)="deviceClicked()">
+    <h2>{{device.name}}</h2>
+    <!--p>Verfügbare Geräte: <b><?= $number_devices ?></b></br>Wartende Personen: <b><?= $waiting['persons'] ?></b></p-->
+    <!--p id="waiting-time">Vorraussichtlich Wartezeit: <b><?= get_post_time_string($waiting['time'], true) ?></b></p-->
+
+  </div>
 </div>
