Add Loading infos, Add option to develop without locale Bacend

--- a/fl-app/src/app/pages/login/login/login.component.html
+++ b/fl-app/src/app/pages/login/login/login.component.html
@@ -1,6 +1,9 @@
 <div> {{ loginData?.login?.loginHeading }}</div>
 <div> {{ loginData?.login?.loginMessage }}</div>
-<app-input-mask [mask]="loginData?.login?.loginMask"
+
+<p *ngIf="!!!loginData">Loading...</p>
+<app-input-mask  *ngIf="!!loginData"
+                 [mask]="loginData?.login?.loginMask"
                 (submitClick)="submitClicked($event)">
 </app-input-mask>
 <div> {{ loginErrorMessage }}</div>
